# knowledge-mcp

./: PRODUCT_DESCPRIPTION.md  README.md
.vibe/: development-plan-default.md
.vibe/docs/: architecture.md  design.md  requirements.md
docint-mcp-server/: .env.example  .gitignore  README.md  pyproject.toml
docint-mcp-server/src/docint_mcp/: __init__.py  azure_search_client.py  config.py  models.py
docint-mcp-server/tests/: __init__.py  conftest.py  test_azure_search_client.py
docs/: AZURE_DOC_INTELLIGENCE_SPEC.md
local-mcp-server/: .coverage  .env.example  README.md  TESTING.md  pyproject.toml
local-mcp-server/src/local_mcp/: __init__.py  config.py  converter.py  ingest_client.py  server.py
local-mcp-server/tests/: __init__.py  conftest.py  test_converter.py  test_ingest_client.py
remote-rag-server/: .coverage  .env.example  API_DOCUMENTATION.md  README.md  pyproject.toml
remote-rag-server/src/remote_rag/: __init__.py  config.py
remote-rag-server/src/remote_rag/api/: __init__.py  app.py  auth.py  logging.py  models.py
remote-rag-server/src/remote_rag/mcp/: __init__.py
remote-rag-server/src/remote_rag/services/: __init__.py  chunker.py  embedder.py  qdrant.py
remote-rag-server/tests/: __init__.py
remote-rag-server/tests/integration/: __init__.py  conftest.py  test_api.py
remote-rag-server/tests/unit/: __init__.py  conftest.py  test_chunker.py  test_embedder.py  test_qdrant.py
